// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article list 1`] = `
<div
  role="main"
>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            count={0}
            hideResults={false}
            page={0}
            pageSize={10}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
    >
      <div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
      id="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
    >
      <div>
        <div>
          <div />
        </div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="ca003c2a-8e6f-11e8-9eb6-529269fb1459.2"
      id="ca003c2a-8e6f-11e8-9eb6-529269fb1459.2"
    >
      <div>
        <div>
          <div />
        </div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="ca003fe0-8e6f-11e8-9eb6-529269fb1459.3"
      id="ca003fe0-8e6f-11e8-9eb6-529269fb1459.3"
    >
      <div>
        <div>
          <div />
        </div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="ca00422e-8e6f-11e8-9eb6-529269fb1459.4"
      id="ca00422e-8e6f-11e8-9eb6-529269fb1459.4"
    >
      <div>
        <div>
          <div />
        </div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div>
      <AdContainer
        identifier={1}
        slotName="articleListAd"
      />
    </div>
    <div>
      <div>
        <Pagination
          count={0}
          hideResults={true}
          page={0}
          pageSize={10}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`2. article list with no images 1`] = `
<div
  role="main"
>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            count={0}
            hideResults={false}
            page={0}
            pageSize={3}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
    >
      <div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={false}
          />
        </div>
      </div>
    </div>
    <div>
      <div>
        <Pagination
          count={0}
          hideResults={true}
          page={0}
          pageSize={3}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`3. article list with missing image 1`] = `
<div
  role="main"
>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            count={0}
            hideResults={false}
            page={0}
            pageSize={3}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
    >
      <div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={false}
          />
        </div>
      </div>
    </div>
    <div>
      <div>
        <Pagination
          count={0}
          hideResults={true}
          page={0}
          pageSize={3}
        />
      </div>
    </div>
  </div>
</div>
`;
